# LogicGatesInCPP

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  LogicGatesInCPP.cpp  LogicGatesInCPP.sln  LogicGatesInCPP.vcxproj  LogicGatesInCPP.vcxproj.filters  README.md
Assets/: LogicGates_ClassDIagram.vpd
Include/LogicGateLibrary/: And.h  Gate.h  IGate.h  ILogic.h  Logic.h  LogicGateLibrary.h  MultipleInput.h  Nand.h  Nor.h  Not.h  Numeric.h  Or.h  SingleInput.h  Version.h  Xnor.h  Xor.h
